--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 
+  <!-- 웹 폰트 -->
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 <body>
 
   <!-- 스킵 내비게이션 -->
@@ -24,10 +26,24 @@
     <a href="#cont_cont">컨텐츠 영역 바로가기</a>
   </div>
   <!-- //스킵 내비게이션 -->
-  
+
   <div id="wrap">
     <div id="header">
-      <div class="container">header</div>
+      <div class="container">
+        <div class="header">
+          <div class="header-menu">`
+            <a href="">Desinger</a>
+            <a href="">Publisher</a>
+            <a href="">Youtube</a>
+          </div>
+          <!-- //헤더 메뉴 -->
+          <div class="header-tit">
+            <h1>Professional Publisher &amp; Designer </h1><br/>
+            <a href="#">webstory</a>
+          </div>
+          <div class="header-icon"></div>
+        </div>
+      </div>
     </div>
     <div id="contents">
       <div id="cont_nav">
