--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -41,7 +41,14 @@
             <h1>Professional Publisher &amp; Designer </h1><br/>
             <a href="#">webstory</a>
           </div>
-          <div class="header-icon"></div>
+          <!-- //헤더 타이틀 -->
+
+          <div class="header-icon">
+            <a class="icon1"><span class="ir_pm">icon1</span></a>
+            <a class="icon2"><span class="ir_pm">icon2</span></a>
+            <a class="icon3"><span class="ir_pm">icon3</span></a>
+            <a class="icon4"><span class="ir_pm">icon4</span></a>
+          </div>
         </div>
       </div>
     </div>
