--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -17,6 +17,7 @@
 
   <!-- 웹 폰트 -->
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap" rel="stylesheet"
 <body>
 
   <!-- 스킵 내비게이션 -->
@@ -110,8 +111,14 @@
           </div>
         </div>
       </div>
+      <!-- //cont-nav -->
       <div id="cont_tit">
-        <div class="container">cont_tit</div>
+        <div class="container">
+          <div class="tit">
+            <h2>"나는 퍼블리셔다!"</h2>
+            <a href="#" class="btn"><span class="ir_su">전체메뉴</span></a>
+          </div>
+        </div>
       </div>
       <div id="cont_ban">
         <div class="container">cont_ban</div>
