--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -121,7 +121,17 @@
         </div>
       </div>
       <div id="cont_ban">
-        <div class="container">cont_ban</div>
+        <div class="container">
+          <div class="ban">
+            <a href="#" class="prev"><span class="ir_su">이전 이미지</span></a>
+            <ul>
+              <li><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"/></a></li>
+              <li><a href="#"><img src="img/banner_link2.jpg" alt="css를 이용한 입체적인 버튼 만들기"/></a></li>
+              <li><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기"/></a></li>
+            </ul>
+            <a href="#" class="next"><span class="ir_su">다음 이미지</span></a>
+          </div>
+        </div>
       </div>
       <div id="cont_cont">
         <div class="container">cont_cont</div>
