--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -259,6 +259,45 @@
             <div class="column col5">
               <h3><span class="ico_img ir_su">아이콘</span><span class="ico_tit">Notice</span></h3>
               <p class="ico_desc">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+              <!-- 탭 메뉴 -->
+              <div class="tab_menu">
+                <h4 class="ir_su">탭 메뉴</h4>
+                <ul>
+                  <li class="active">
+                    <a href="#">공지사항1</a>
+                    <ul>
+                      <li><a href="#">첫 번째 공지사항 탭 메뉴 리스트 목록입니다.첫 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">첫 번째 공지사항 탭 메뉴 리스트 목록입니다.첫 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">첫 번째 공지사항 탭 메뉴 리스트 목록입니다.첫 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">공지사항2</a>
+                    <ul style="display: none;">
+                      <li><a href="#">두 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">두 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">두 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#">공지사항3</a>
+                    <ul style="display: none;">
+                      <li><a href="#">세 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">세 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                      <li><a href="#">세 번째 공지사항 탭 메뉴 리스트 목록입니다.</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!-- // 탭 메뉴-->
+              <div class="notice4 mt15">
+                <h4>최신 <em>공지사항</em></h4>
+                <a href="#" class="more">더보기</a>
+                <ul>
+                  <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이는 무엇인가요?</a><span>2023.06.08</span></li>
+                  <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이는 무엇인가요?</a><span>2023.06.08</span></li>
+                  <li><a href="#">웹 디자이너와 웹 퍼블리셔의 차이는 무엇인가요?</a><span>2023.06.08</span></li>
+                </ul>
+              </div>
             </div><!-- //col5 -->
             <div class="column col6">
               <h3><span class="ico_img ir_su">아이콘</span><span class="ico_tit">Notice</span></h3>
