--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -205,6 +205,34 @@
             <div class="column col3">
               <h3><span class="ico_img ir_su">아이콘</span><span class="ico_tit">Notice</span></h3>
               <p class="ico_desc">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
+
+              <form id="login_form" name="login_form" action="post">
+                <div class="lc_header">
+                  <h5 class="ir_su">로그인 및 관련 설정</h5>
+                  <div class="lh_check">
+                    <input type="checkbox" id="lh_check" class="input_check" />
+                    <label for="lh_check">로그인 상태 유지</label>
+                  </div>
+                  <div class="lh_ip">IP 보안 <em>ON</em></div>
+                </div>
+                <div class="lc_content">
+                  <h5 class="ir_su">로그인 영역</h5>
+                  <div class="lc_text">
+                    <label for="uid" class="ir_su">아이디</label>
+                    <input type="text" name="uid" id="uid" class="input_text"/>
+                    <label for="upw" class="ir_su">비밀번호</label>
+                    <input type="password" name="upw" id="upw" class="input_text"/>
+                  </div>
+                  <button class="lc_btn" type="submit">로그인</button>
+                </div>
+                <div class="lc_footer">
+                  <h5 class="ir_su">로그인 문제 해결</h5>
+                  <ul>
+                    <li><a href="#"><strong>회원가입</strong> / </a></li>
+                    <li><a href="#">아이디&middot;비밀번호 찾기</a></li>
+                  </ul>
+                </div>
+              </form>
             </div><!-- //col3 -->
             <div class="column col4">
               <h3><span class="ico_img ir_su">아이콘</span><span class="ico_tit">Notice</span></h3>
