스크립트 - 전체 메뉴, 배너

--- a/web_pub/index.html
+++ b/web_pub/index.html
@@ -123,13 +123,22 @@
       <div id="cont_ban">
         <div class="container">
           <div class="ban">
-            <a href="#" class="prev"><span class="ir_su">이전 이미지</span></a>
+            <!-- <a href="#" class="prev"><span class="ir_su">이전 이미지</span></a>
             <ul>
               <li><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"/></a></li>
               <li><a href="#"><img src="img/banner_link2.jpg" alt="css를 이용한 입체적인 버튼 만들기"/></a></li>
               <li><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기"/></a></li>
             </ul>
-            <a href="#" class="next"><span class="ir_su">다음 이미지</span></a>
+            <a href="#" class="next"><span class="ir_su">다음 이미지</span></a> -->
+            <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+            <div><a href="#"><img src="img/banner_link2.jpg" alt="css를 이용한 입체적인 버튼 만들기" /></a></div>
+            <div><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기"/></a></div>
+            <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+            <div><a href="#"><img src="img/banner_link2.jpg" alt="css를 이용한 입체적인 버튼 만들기" /></a></div>
+            <div><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기" /></a></div>
+            <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+            <div><a href="#"><img src="img/banner_link2.jpg" alt="css를 이용한 입체적인 버튼 만들기" /></a></div>
+            <div><a href="#"><img src="img/banner_link3.jpg" alt="HTML5를 이용한 로그인 폼 만들기" /></a></div>
           </div>
         </div>
       </div>
@@ -396,5 +405,31 @@
       </div>
     </div>
   </div>
+
+  <!-- script -->
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  <!-- slick -->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+  <script>
+    //배너
+    $('.ban').slick({
+      infinite: true,
+      slidesToShow: 3,
+      slidesToScroll: 3,
+      autoplay: true,
+      autoplaySpeed: 3000,
+      dots: true
+    })
+    // 전체메뉴
+    $(".tit .btn").click(function(e) {
+      e.preventDefault();
+      $('#cont_nav').slideToggle(300);
+      $(this).toggleClass('on')
+    })
+  </script>
 </body>
 </html>
